--- a/src/components/code/code-js/pages/elem-code-ascii.html
+++ b/src/components/code/code-js/pages/elem-code-ascii.html
@@ -6,7 +6,7 @@
 <article class="article">
   <div class="anchor" id="ascii"></div>
   <h2>Таблица ASCII</h2>
-  <p>Так выглядит таблица ASCII (American Standard Code for Information Interchange) с символами от 0 до 127</p>
+  <p>Так выглядит таблица ASCII (American Standard Code for Information Interchange) с символами от 0 до 127. Совпадает с символами Unicode от 00 до 7F.</p>
 <pre>
   DEC  HEX  CHAR
   -------------
