--- a/src/components/code/code-js/pages/elem-code-js.html
+++ b/src/components/code/code-js/pages/elem-code-js.html
@@ -54,6 +54,7 @@
 
   <h3>Статьи</h3>
 
+  <p><a href="https://dmitripavlutin.com/javascript-classes-complete-guide/">The Complete Guide to JavaScript Classes</a> (Dmitri Pavlutin 2019-12-11)</p>
   <p><a href="https://frontend-stuff.com/blog/object-oriented-programming/">ООП в JavaScript Вкратце об объектно-ориентированном программировании</a> (Alexey Myzgin 2020-01-24)</p>
   <p><a href="https://gcoder.ru/gajd-dlya-razvitiya-frontend-razrabotchika-v-2021/">ГАЙД ДЛЯ РАЗВИТИЯ ФРОНТЕНД-РАЗРАБОТЧИКА В 2021</a></p>
   <p><a href="https://ru.hexlet.io/blog/posts/js-s-chego-nachat">С чего начать изучение JavaScript и как это делать эффективно</a> (Екатерина Самохвалова 2022-09-22)</p>
@@ -84,32 +85,40 @@
   <tbody><tr>
   <th>Ver</th>
   <th>Official Name</th>
+  <th>Дата выхода</th>
   <th>Description</th>
   </tr>
   <tr>
   <td>ES1</td>
-  <td>ECMAScript 1 (1997)</td><td>First edition</td>
+  <td>ECMAScript 1</td>
+  <td>Июнь 1997</td>
+  <td>First edition</td>
   </tr>
   <tr>
   <td>ES2</td>
-  <td>ECMAScript 2 (1998)</td><td>Editorial changes</td>
+  <td>ECMAScript 2</td>
+  <td>Июнь 1998</td>
+  <td>Editorial changes</td>
   </tr>
   <tr>
   <td>ES3</td>
-  <td>ECMAScript 3 (1999)</td><td>Added regular expressions<br>
+  <td>ECMAScript 3 (1999)</td>
+  <td>Декабрь 1999</td>
+  <td>Added regular expressions<br>
   Added try/catch<br>
   Added switch<br>
   Added do-while</td>
   </tr>
   <tr>
   <td>ES4</td>
-  <td>ECMAScript 4</td><td>Never released</td>
+  <td>ECMAScript 4</td>
+  <td>Не выпущена</td>
+  <td>Never released</td>
   </tr>
   <tr>
   <td>ES5</td>
-  <td>ECMAScript 5 (2009)<br><br>
-  <a href="https://www.w3schools.com/js/js_es5.asp" class="ws-btn">Read More</a>
-  </td>
+  <td>ECMAScript 5 (2009)</td>
+  <td>Декабрь 2009</td>
   <td>
   Added "strict mode"<br>
   Added JSON support<br>
@@ -121,8 +130,8 @@
   </tr>
   <tr>
   <td>ES6</td>
-  <td>ECMAScript 2015<br><br>
-  <a href="https://www.w3schools.com/js/js_es6.asp" class="ws-btn">Read More</a></td>
+  <td>ECMAScript 2015</td>
+  <td>Июнь 2015</td>
   <td>Added let and const<br>
   Added default parameter values<br>
   Added Array.find()<br>
@@ -130,18 +139,18 @@
   </td>
   </tr>
   <tr>
-  <td></td>
-  <td>ECMAScript 2016<br><br>
-  <a href="https://www.w3schools.com/js/js_2016.asp" class="ws-btn">Read More</a></td>
+  <td>ES7</td>
+  <td>ECMAScript 2016</td>
+  <td>Июнь 2016</td>
   <td>Added exponential operator (**)<br>
   Added Array.includes()
   </td>
   </tr>
   <tr>
-  <td></td>
-  <td>ECMAScript 2017<br><br>
-  <a href="https://www.w3schools.com/js/js_2017.asp" class="ws-btn">Read More</a>
-  </td><td>Added string padding<br>
+  <td>ES8</td>
+  <td>ECMAScript 2017</td>
+  <td>Июнь 2017</td>
+  <td>Added string padding<br>
   Added Object.entries()<br>
   Added Object.values()<br>
   Added async functions<br>
@@ -150,10 +159,10 @@
   </td>
   </tr>
   <tr>
-  <td></td>
-  <td>ECMAScript 2018<br><br>
-  <a href="https://www.w3schools.com/js/js_2018.asp" class="ws-btn">Read More</a>
-  </td><td>
+  <td>ES9</td>
+  <td>ECMAScript 2018</td>
+  <td>Июнь 2018</td>
+  <td>
   Added rest / spread properties<br>
   Added asynchronous iteration<br>
   Added Promise.finally()<br>
@@ -161,10 +170,10 @@
   </td>
   </tr>
   <tr>
-  <td></td>
-  <td>ECMAScript 2019<br><br>
-  <a href="https://www.w3schools.com/js/js_2019.asp" class="ws-btn">Read More</a>
-  </td><td>
+  <td>ES10</td>
+  <td>ECMAScript 2019</td>
+  <td>Июнь 2019</td>
+  <td>
   String.trimStart()<br>
   String.trimEnd()<br>
   Array.flat()<br>
@@ -173,10 +182,10 @@
   </td>
   </tr>
   <tr>
-  <td></td>
-  <td>ECMAScript 2020<br><br>
-  <a class="ws-btn" href="https://www.w3schools.com/js/js_2020.asp">Read More</a>
-  </td><td>
+  <td>ES11</td>
+  <td>ECMAScript 2020</td>
+  <td>Июнь 2020</td>
+  <td>
   The Nullish Coalescing Operator (??)<br>
   </td>
   </tr>
