--- a/src/components/code/code-markdown/pages/elem-code-markdown.html
+++ b/src/components/code/code-markdown/pages/elem-code-markdown.html
@@ -1,133 +1,137 @@
 <h1>Markdown</h1>
-<ul>
-  <li>
-    Заголовоки h1-h16 выделяются с помощью решетки #
-<pre># Заголовок 1
-## Заголовок 2
-### Заголовок 3
-#### Заголовок 4
-##### Заголовок 5
-###### Заголовок 6</pre>
-    Решетку # можно поставить с двух сторон
-<pre># Заголовок 1 #
-## Заголовок 2 ##
-### Заголовок 3 ###
-#### Заголовок 4 ####
-##### Заголовок 5 #####
-###### Заголовок 6 ######</pre>
-    Заголовок h1 можно выделить если на следующей строке указать любое количество знаков «равно» =
-<pre>Заголовок 1
-===</pre>
-    Заголовок h2 можно выделить если на следующей строке указать любое количество знаков «минус» -
-<pre>Заголовок 2
---</pre>
-  </li>
 
-  <li>
-    Абзац создается при помощи пустой строки. Если вокруг текста сверху и снизу есть пустые строки, то текст превращается в абзац.
-  </li>
+<article class="article">
 
-  <li>
-    Перенос строки. Чтобы сделать перенос строки вместо абзаца, нужно поставить два пробела в конце предыдущей строки.
-  </li>
+  <ul>
+    <li>
+      Заголовоки h1-h16 выделяются с помощью решетки #
+  <pre># Заголовок 1
+  ## Заголовок 2
+  ### Заголовок 3
+  #### Заголовок 4
+  ##### Заголовок 5
+  ###### Заголовок 6</pre>
+      Решетку # можно поставить с двух сторон
+  <pre># Заголовок 1 #
+  ## Заголовок 2 ##
+  ### Заголовок 3 ###
+  #### Заголовок 4 ####
+  ##### Заголовок 5 #####
+  ###### Заголовок 6 ######</pre>
+      Заголовок h1 можно выделить если на следующей строке указать любое количество знаков «равно» =
+  <pre>Заголовок 1
+  ===</pre>
+      Заголовок h2 можно выделить если на следующей строке указать любое количество знаков «минус» -
+  <pre>Заголовок 2
+  --</pre>
+    </li>
 
-  <li>
-    Горизонтальная черта
-    <pre>***</pre>или
-    <pre>---</pre>или
-    <pre>___</pre>
-  </li>
-  
-  <li>
-    <em>Курсивный текст</em>
-    <pre>*курсивный текст*</pre>или
-    <pre>_курсивный текст_</pre>
-  </li>
+    <li>
+      Абзац создается при помощи пустой строки. Если вокруг текста сверху и снизу есть пустые строки, то текст превращается в абзац.
+    </li>
 
-  <li>
-    <strong>Жирный текст</strong>
-    <pre>**жирный текст**</pre>или
-    <pre>__жирный текст__</pre>
-  </li>
-  
-  <li>
-    <strong><em>Жирный курсивный текст</em></strong>
-    <pre>***жирный курсивный текст***</pre>или
-    <pre>__жирный курсивный текст___</pre>
-  </li>
-  
-  <li>
-    Зачеркнутый текст
-    <code>~~зачеркнутый текст~~</code>
-  </li>
+    <li>
+      Перенос строки. Чтобы сделать перенос строки вместо абзаца, нужно поставить два пробела в конце предыдущей строки.
+    </li>
 
-  <li>
-    Картинка
-    <code>![текст тега alt](https://pictures.com/foto.jpg "текст тега title")</code>
-  </li>
-  
-  <li>
-    Ссылка
-    <pre>[ссылка на гугл](https://google.com)</pre>
-  </li>
-
-  <li>
-    Картинка-ссылка
-    <code>[![текст тега alt](https://pictures.com/foto.jpg "текст тега title")](https://pictures.com)</code>
-  </li>
+    <li>
+      Горизонтальная черта
+      <pre>***</pre>или
+      <pre>---</pre>или
+      <pre>___</pre>
+    </li>
     
-  <li>Маркированный список
-    <pre>- item
-- item</pre>или
-    <pre>+ item 
-+ item</pre>или
-    <pre>* item 
-* item</pre>
-  </li>
+    <li>
+      <em>Курсивный текст</em>
+      <pre>*курсивный текст*</pre>или
+      <pre>_курсивный текст_</pre>
+    </li>
+
+    <li>
+      <strong>Жирный текст</strong>
+      <pre>**жирный текст**</pre>или
+      <pre>__жирный текст__</pre>
+    </li>
     
-  <li>Вложенный список
-    <pre>- item
+    <li>
+      <strong><em>Жирный курсивный текст</em></strong>
+      <pre>***жирный курсивный текст***</pre>или
+      <pre>__жирный курсивный текст___</pre>
+    </li>
+    
+    <li>
+      Зачеркнутый текст
+      <code>~~зачеркнутый текст~~</code>
+    </li>
+
+    <li>
+      Картинка
+      <code>![текст тега alt](https://pictures.com/foto.jpg "текст тега title")</code>
+    </li>
+    
+    <li>
+      Ссылка
+      <pre>[ссылка на гугл](https://google.com)</pre>
+    </li>
+
+    <li>
+      Картинка-ссылка
+      <code>[![текст тега alt](https://pictures.com/foto.jpg "текст тега title")](https://pictures.com)</code>
+    </li>
+      
+    <li>Маркированный список
+      <pre>- item
   - item</pre>или
-    <pre>+ item 
-  + item </pre>или
-    <pre>* item 
+      <pre>+ item 
+  + item</pre>или
+      <pre>* item 
   * item</pre>
-  </li>
-    
-  <li>Нумерованный список (любые цифры)
-    <pre>1. item
-1. item
+    </li>
+      
+    <li>Вложенный список
+      <pre>- item
+    - item</pre>или
+      <pre>+ item 
+    + item </pre>или
+      <pre>* item 
+    * item</pre>
+    </li>
+      
+    <li>Нумерованный список (любые цифры)
+      <pre>1. item
   1. item
-  1. item</pre>
-  </li>
-    
-  <li>Цитаты
-    <pre>> text
-> text
-> text</pre>
-  </li>
-    
-  <li>Исходный код пишут с помощью обратных кавычек. Инлайн код выделяют одиночными обратными кавычками. Блок кода - тройными
-<pre>\`let a = 5;\`</pre>
-<pre>\`\`\`let a = 5;
-let b = a +5;\`\`\`</pre>
-  </li>
-    
-  <li>Сноски
-    <pre>Сноска первая [^1] и сноска вторая [^2]
-[^1]: Текст сноски 1
-[^2]: Текст сноски 2</pre>
-  </li>
-    
-  <li>Таблица. Для таблиц используют вертикальную черту и дефис
-    <pre>цвет | rgb | hex
-:----|:----:|------:
-красный | 255,0,0 | ff0000
-зеленый | 0,255,0 | 00ff00
-синий   | 0,0,255 | 0000ff</pre>
-  </li>
+    1. item
+    1. item</pre>
+    </li>
+      
+    <li>Цитаты
+      <pre>> text
+  > text
+  > text</pre>
+    </li>
+      
+    <li>Исходный код пишут с помощью обратных кавычек. Инлайн код выделяют одиночными обратными кавычками. Блок кода - тройными
+  <pre>\`let a = 5;\`</pre>
+  <pre>\`\`\`let a = 5;
+  let b = a +5;\`\`\`</pre>
+    </li>
+      
+    <li>Сноски
+      <pre>Сноска первая [^1] и сноска вторая [^2]
+  [^1]: Текст сноски 1
+  [^2]: Текст сноски 2</pre>
+    </li>
+      
+    <li>Таблица. Для таблиц используют вертикальную черту и дефис
+      <pre>цвет | rgb | hex
+  :----|:----:|------:
+  красный | 255,0,0 | ff0000
+  зеленый | 0,255,0 | 00ff00
+  синий   | 0,0,255 | 0000ff</pre>
+    </li>
 
-  <li>
-    Экранирование. Чтобы спецсимволы не исчезали и не влияли на оформление, нужно использовать экранирование. Как и во многих других языках программирования, этим целям служит обратная косая черта (бэкслеш).
-  </li>
-</ul>
+    <li>
+      Экранирование. Чтобы спецсимволы не исчезали и не влияли на оформление, нужно использовать экранирование. Как и во многих других языках программирования, этим целям служит обратная косая черта (бэкслеш).
+    </li>
+  </ul>
+</article>
