--- a/src/components/code/code-sass/pages/elem-code-sass.html
+++ b/src/components/code/code-sass/pages/elem-code-sass.html
@@ -1,13 +1,25 @@
 <h1>SASS</h1>
-<div class="content__menu">
-  <p class="content__menu-link" id="content__menu-link1">Links</p>
+
+<!-- Заголовок -->
+<div class="article">
+  <div class="anchor" id="content"></div>
+  <h2>Содержание</h2>
 </div>
-<div class="content__items">
-  <div class="content__item" id="content__item1">
-    <h3>Links </h3>
-    <ol> 
-      <li> <a href="https://sass-scss.ru/">https://sass-scss.ru/</a></li>
-      <li> <a href="https://sass-lang.com/">https://sass-lang.com/</a></li>
-    </ol>
+
+<!-- Содержание -->
+<div class="article article__content">
+
+  <div>
+    <p><a href="#links">links</a></p>
   </div>
+
 </div>
+
+<!-- links-->
+<article class="article">
+  <div class="anchor" id="links"></div>
+  <h2>links</h2>
+
+  <p><a href="https://sass-scss.ru/">https://sass-scss.ru/</a></p>
+  <p><a href="https://sass-lang.com/">https://sass-lang.com/</a></p>
+</article>
