--- a/src/components/front/front-edu/pages/elem-edu-quiz.html
+++ b/src/components/front/front-edu/pages/elem-edu-quiz.html
@@ -8,9 +8,9 @@
   <!-- Содержание -->
   <div class="article__contents">
     <a href="#rs-test" class="contents__link">RS Auto Test</a>
+    <a href="#dsr-exam" class="contents__link">DSR Exam</a>
     <a href="#quiz" class="contents__link">quiz</a>
     <a href="#rain" class="contents__link">Дождь</a>
-    <a href="#star" class="contents__link">Star</a>
   </div>
 </div>
 
@@ -47,8 +47,24 @@
     <hr>
     <li><a href="rs-test/rs-test-modules.html" class="js-rs-test">Modules in JavaScript</a> (78 из 100)</li>
     <li><a href="rs-test/rs-test-bundlers.html" class="js-rs-test">Introduction to Bundlers</a> (86 из 100)</li>
+    <hr>
+    <li><a href="rs-test/rs-test-chrome.html" class="js-rs-test">Chrome DevTools</a> (94 из 100)</li>
+    <li><a href="rs-test/rs-test-client.html" class="js-rs-test">Client - Server interaction</a> (94 из 100)</li>
+    <hr>
+    <li><a href="rs-test/rs-test-classes.html" class="js-rs-test">Classes & Prototypes</a> (96 из 100)</li>
+    <li><a href="rs-test/rs-test-oop.html" class="js-rs-test">OOP Test</a> (95 из 100)</li>
+    <li><a href="rs-test/rs-test-final.html" class="js-rs-test">Final test stage#1</a> (91 из 100)</li>
   </ol>
 </article>
+
+
+<!-- dsr-exam -->
+<article class="article">
+  <div class="anchor" id="dsr-exam"></div>
+  <h2>DSR NetSchool 2023/24 Exam</h2>
+  <p><a href="dsr/dsr-exam.html" class="dsr-exam">DSR NetSchool 2023/24 Exam</a> (55 из 100)</p>
+</article>
+
 
 <!-- quiz -->
 <article class="article">
@@ -68,11 +84,4 @@
   <div class="anchor" id="rain"></div>
   <h2>Дождь на canvas</h2>
   <canvas id="playground-rain" class="playground" height="600"></canvas>
-</article>
-
-<!-- star -->
-<article class="article">
-  <div class="anchor" id="star"></div>
-  <h2>Звездное небо на canvas</h2>
-  <canvas id="playground-star" class="playground" height="600"></canvas>
 </article>
