--- a/src/components/front/front-edu/pages/elem-edu-rss2023-stage1.html
+++ b/src/components/front/front-edu/pages/elem-edu-rss2023-stage1.html
@@ -475,7 +475,7 @@
       </ul>
       <li>Tasks:
         <ul>
-          <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/tasks">Final task stage1</a></li>
+          <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/nonograms">Nonograms</a></li>
         </ul>
       </li>
       <li>Tests:
@@ -498,7 +498,7 @@
       </ul>
       <li>Tasks:
         <ul>
-          <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/tasks">Final task stage1</a></li>
+          <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/nonograms">Nonograms</a></li>
         </ul>
       </li>
       <li>Tests:
@@ -515,11 +515,30 @@
   <div class="anchor" id="week12"></div>
   <h3>Неделя #12 (6 февраля 2024)</h3>
   <ul>
-    <li>Cross-check review of the Final task stage1</li>
-    <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/self-introduction">Project "Self-introduction"</a></li>
-    <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/classes-prototypes">Module: "JavaScript. Classes & Prototypes"</a></li>
-    <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/oop-basics">Module: Object-Oriented Programming Basics</a></li>
-    <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/modules/technical-screening">Preparation for Technical Screening(Подготовка к собеседованию с ментором)</a></li>
+    <li>Cross-Check Reviews:
+      <ul>
+        <li>Cross-check review of project "Nonograms"</li>
+      </ul>
+    </li>
+    <li>Modules:
+      <ul>
+        <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/classes-prototypes">Module: "JavaScript. Classes & Prototypes"</a></li>
+        <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/oop-basics">Module: Object-Oriented Programming Basics</a></li>
+        <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/modules/technical-screening">Preparation for Technical Screening (Подготовка к собеседованию с ментором)</a></li>
+      </ul>
+    </li>
+    <li>Tasks:
+      <ul>
+        <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/self-introduction">Project "Self-introduction"</a></li>
+      </ul>
+    </li>
+    <li>Tests:
+      <ul>
+        <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/classes-prototypes">[St1] Classes & Prototypes</a></li>
+        <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/classes-prototypes">[St1] OOP Test</a></li>
+        <li><a href="https://github.com/rolling-scopes-school/tasks/tree/master/stage1">[St1] Final test stage#1</a></li>        
+      </ul>
+    </li>
   </ul>
 </article>
 
@@ -575,25 +594,37 @@
   <hr>
   <h3>Week 8</h3>
   <ul>
-    <li><a href="https://www.youtube.com/watch?v=XmVbnmJ2QEc">Rolling Scopes School Georgia. Modules</a></li>
-    <li><a href="https://www.youtube.com/watch?v=gvB0qoio-Ic&list=PLe--kalBDwji8WXKVjhON39X4v_Uj6T_R&index=8">RS Uzbekistan. Devtools and debugging</a></li>
-  </ul>
-  <hr>
-  <h3>Week 10</h3>
-  <ul>
-    <li><a href="https://www.youtube.com/watch?v=4jA9Nea51T8">Network communication (1/2)</a></li>
-    <li><a href="https://www.youtube.com/watch?v=_8GoJck9O9Y">Network communication (2/2)</a></li>
     <li><a href="https://www.youtube.com/watch?v=Edue1LmnZqo">JS/FE 2021Q3 Webpack and Preprocessors</a></li>
     <li><a href="https://www.youtube.com/watch?v=bozzyi8Tok0">JSFE2021Q1 Webpack</a></li>
     <li><a href="https://www.youtube.com/watch?v=o8KMucDpSno">Webpack 5 — Полный курс для начинающих. Обработка html, css, scss, js, image compress.</a></li>
     <li><a href="https://www.youtube.com/watch?v=gVenbqg9Rww">Настройка Webpack 5 для начинающих. Описание принципа работы webpack. Html, css, scss, pug, jQuery</a></li>
   </ul>
   <hr>
+  <h3>Week 9</h3>
+  <ul>
+    <li><a href="https://www.youtube.com/watch?v=XmVbnmJ2QEc">Rolling Scopes School Georgia. Modules</a></li>
+  </ul>
+  <h3>Week 10</h3>
+  <ul>
+    <li><a href="https://www.youtube.com/watch?v=gvB0qoio-Ic">RS Uzbekistan. Devtools and debugging</a></li>
+  </ul>
+  <hr>
+  <h3>Week 11</h3>
+  <ul>
+    <li><a href="https://www.youtube.com/watch?v=4jA9Nea51T8">RS School Webinar on Network Communication part 1 (RU)</a></li>
+    <li><a href="https://www.youtube.com/watch?v=_8GoJck9O9Y">RS School Webinar on Network Communication part 2 (RU)</a></li>
+    <li><a href="https://www.youtube.com/watch?v=j9QmMEWmcfo">SSL, TLS, HTTPS Explained</a></li>
+  </ul>
+  <hr>
   <h3>Week 12</h3>
   <ul>
+    <li><a href="https://youtube.com/watch?v=2ZphE5HcQPQ">JavaScript Classes Tutorial</a></li>
+    <li><a href="https://www.youtube.com/watch?v=wfMtDGfHWpA">Composition over Inheritance</a></li>
+    <li><a href="https://www.youtube.com/watch?v=vDJpGenyHaA">JavaScript OOP Crash Course (ES5 & ES6)</a></li>
     <li><a href="https://www.youtube.com/watch?v=O462BetYst8">RS School. JavaScript Classes</a></li>
     <li><a href="https://www.youtube.com/watch?v=QceUxKQeFDA">JavaScript Classes & Prototypes / Классы и прототипы в JavaScript.</a></li>
     <li><a href="https://www.youtube.com/watch?v=uy_6CeZ6MTU">Classes / Классы</a></li>
+    <li><a href="https://www.youtube.com/watch?v=vDJpGenyHaA">JavaScript OOP Crash Course (ES5 & ES6)</a></li>
   </ul>
   <hr>
 </article>
