--- a/src/components/front/front-edu/pages/rs-test/rs-test-algorithms.html
+++ b/src/components/front/front-edu/pages/rs-test/rs-test-algorithms.html
@@ -75,7 +75,7 @@
     <li><strong>Accessing an arbitrary element by index</strong></li>
     <li><strong>Modifying an arbitrary element by index</strong></li>
     <li>Outputting all list / array elements to the console</li>
-    <li><strong>Removing an element from the list / array</strong></li>
+    <li>Removing an element from the list / array</li>
   </ul>
 </article>
 
