--- a/src/components/code/code-pug/pages/elem-code-pug.html
+++ b/src/components/code/code-pug/pages/elem-code-pug.html
@@ -1,26 +1,43 @@
 <h1>Pug</h1>
-<div class="content__menu">
-  <p class="content__menu-link" id="content__menu-link1">Links</p>
-  <p class="content__menu-link" id="content__menu-link2">Статьи</p>
+
+
+<!-- Заголовок -->
+<div class="article">
+  <div class="anchor" id="content"></div>
+  <h2>Содержание</h2>
 </div>
-<div class="content__items">
-  <div class="content__item" id="content__item1">
-    <h3>Links </h3>
-    <ul> 
-      <li> <a href="https://pugjs.org/api/getting-started.html">pugjs.org</a></li>
-      <li><a href="https://html-to-pug.com/">HTML TO PUG - Online Converter</a></li>
-      <li><a href="https://html2jade.org/">HTML to JADE/PUGrealtime online converter</a></li>
-    </ul>
+
+<!-- Содержание -->
+<div class="article article__content">
+
+  <div>
+    <p><a href="#links">links</a></p>
+    <p><a href="#articles">Статьи</a></p>
   </div>
-  <div class="content__item" id="content__item2">
-    <h3>Статьи </h3>
-    <ul> 
-      <li>Препроцессор pug доводит обычный html до уровня языка программирования со всеми вытекающими конструкциями (ветвлениями, функциями, переменными, циклами)</li>
-      <li><a href="https://devhints.io/pug">devhints.io/pug</a></li>
-      <li><a href="https://frontips.ru/pug-shablonizator-i-preprocessor-html/">frontips.ru</a></li>
-      <li><a href="https://zaurmag.ru/html5-css3/html-preprotsessor-pug-jade.html">zaurmag.ru</a></li>
-      <li><a href="https://nodejsdev.ru/guide/express-pug/">nodejsdev.ru</a></li>
-      <li><a href="https://tokmakov.msk.ru/blog/item/627">tokmakov.msk.ru</a></li>
-    </ul>
-  </div>
+
 </div>
+
+
+<!-- links-->
+<article class="article">
+  <div class="anchor" id="links"></div>
+  <h2>links</h2>
+
+  <p><a href="https://pugjs.org/api/getting-started.html">pugjs.org</a></p>
+  <p><a href="https://html-to-pug.com/">HTML TO PUG - Online Converter</a></p>
+  <p><a href="https://html2jade.org/">HTML to JADE/PUGrealtime online converter</a></p>
+</article>
+
+
+<!-- articles-->
+<article class="article">
+  <div class="anchor" id="articles"></div>
+  <h2>Статьи </h2>
+
+  <p>Препроцессор pug доводит обычный html до уровня языка программирования со всеми вытекающими конструкциями (ветвлениями, функциями, переменными, циклами)</p>
+  <p><a href="https://devhints.io/pug">devhints.io/pug</a></p>
+  <p><a href="https://frontips.ru/pug-shablonizator-i-preprocessor-html/">frontips.ru</a></p>
+  <p><a href="https://zaurmag.ru/html5-css3/html-preprotsessor-pug-jade.html">zaurmag.ru</a></p>
+  <p><a href="https://nodejsdev.ru/guide/express-pug/">nodejsdev.ru</a></p>
+  <p><a href="https://tokmakov.msk.ru/blog/item/627">tokmakov.msk.ru</a></p>
+</article>
